k8s-deployment/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ap-northeast-1.amazonaws.com/minhtruong-ecr/api-service:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: web
  type: ClusterIP
