k8s-deployment/deployment-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ap-northeast-1.amazonaws.com/minhtruong-ecr/monitor-service:latest
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: monitor-service
spec:
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: web
  type: ClusterIP
