k8s-deployment/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ap-northeast-1.amazonaws.com/minhtruong-ecr/worker-service:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: worker-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: web
  type: ClusterIP
